Update role binding create contract
