# api_kafka_rbac_resource.go
@@ -27,15 +27,15 @@ type ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest struct {
 	ctx context.Context
 	ApiService *KafkaRbacResourceApiService
 	name string
-	kafkaRbacRequest *KafkaRbacRequest
+	rbacRoleBindingRequest *RbacRoleBindingRequest
 }
 
-func (r ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest) KafkaRbacRequest(kafkaRbacRequest KafkaRbacRequest) ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest {
-	r.kafkaRbacRequest = &kafkaRbacRequest
+func (r ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest) RbacRoleBindingRequest(rbacRoleBindingRequest RbacRoleBindingRequest) ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest {
+	r.rbacRoleBindingRequest = &rbacRoleBindingRequest
 	return r
 }
 
-func (r ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest) Execute() (*http.Response, error) {
+func (r ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest) Execute() (*RbacRoleBindingResponse, *http.Response, error) {
 	return r.ApiService.ApisKafkaRbacV1NamespacesNameBindingsPostExecute(r)
 }
 
@@ -55,16 +55,18 @@ func (a *KafkaRbacResourceApiService) ApisKafkaRbacV1NamespacesNameBindingsPost(
 }
 
 // Execute executes the request
-func (a *KafkaRbacResourceApiService) ApisKafkaRbacV1NamespacesNameBindingsPostExecute(r ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest) (*http.Response, error) {
+//  @return RbacRoleBindingResponse
+func (a *KafkaRbacResourceApiService) ApisKafkaRbacV1NamespacesNameBindingsPostExecute(r ApiApisKafkaRbacV1NamespacesNameBindingsPostRequest) (*RbacRoleBindingResponse, *http.Response, error) {
 	var (
 		localVarHTTPMethod   = http.MethodPost
 		localVarPostBody     interface{}
 		formFiles            []formFile
+		localVarReturnValue  *RbacRoleBindingResponse
 	)
 
 	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "KafkaRbacResourceApiService.ApisKafkaRbacV1NamespacesNameBindingsPost")
 	if err != nil {
-		return nil, &GenericOpenAPIError{error: err.Error()}
+		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
 	}
 
 	localVarPath := localBasePath + "/apis/kafka.rbac/v1/namespaces/{name}/bindings"
@@ -84,7 +86,7 @@ func (a *KafkaRbacResourceApiService) ApisKafkaRbacV1NamespacesNameBindingsPostE
 	}
 
 	// to determine the Accept header
-	localVarHTTPHeaderAccepts := []string{}
+	localVarHTTPHeaderAccepts := []string{"application/json"}
 
 	// set Accept header
 	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
@@ -92,22 +94,22 @@ func (a *KafkaRbacResourceApiService) ApisKafkaRbacV1NamespacesNameBindingsPostE
 		localVarHeaderParams["Accept"] = localVarHTTPHeaderAccept
 	}
 	// body params
-	localVarPostBody = r.kafkaRbacRequest
+	localVarPostBody = r.rbacRoleBindingRequest
 	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
 	if err != nil {
-		return nil, err
+		return localVarReturnValue, nil, err
 	}
 
 	localVarHTTPResponse, err := a.client.callAPI(req)
 	if err != nil || localVarHTTPResponse == nil {
-		return localVarHTTPResponse, err
+		return localVarReturnValue, localVarHTTPResponse, err
 	}
 
 	localVarBody, err := ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
 	localVarHTTPResponse.Body = ioutil.NopCloser(bytes.NewBuffer(localVarBody))
 	if err != nil {
-		return localVarHTTPResponse, err
+		return localVarReturnValue, localVarHTTPResponse, err
 	}
 
 	if localVarHTTPResponse.StatusCode >= 300 {
@@ -115,8 +117,17 @@ func (a *KafkaRbacResourceApiService) ApisKafkaRbacV1NamespacesNameBindingsPostE
 			body:  localVarBody,
 			error: localVarHTTPResponse.Status,
 		}
-		return localVarHTTPResponse, newErr
+		return localVarReturnValue, localVarHTTPResponse, newErr
 	}
 
-	return localVarHTTPResponse, nil
+	err = a.client.decode(&localVarReturnValue, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
+	if err != nil {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: err.Error(),
+		}
+		return localVarReturnValue, localVarHTTPResponse, newErr
+	}
+
+	return localVarReturnValue, localVarHTTPResponse, nil
 }
